--- a/src/Lily/ApiBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/ApiBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -2,7 +2,7 @@
 	<header id="lily-header" class="lily-cst-header">
 		<span class="lily-icon lily-left lily-bt-menu lily-icon-menu"></span>
 		{% if enterprise.avi and config.avi %}
-		<a href="#/" class="lily-right"><p>Posez votre question à Lily<i class="lily-icon lily-icon-avatar"></i></p></a>
+		<a href="#/avi" class="lily-right"><p>Posez votre question à Lily<i class="lily-icon lily-icon-avatar"></i></p></a>
 		{% endif %}
 	</header>
 	<section class="lily-main-content">
