--- a/src/Lily/ApiBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/ApiBundle/Resources/views/themes/lily/index.html.twig
@@ -37,7 +37,7 @@
 				{% if config.avi and enterprise.avi %}
 				<li><a href="#/avi"><span class='lily-icon lily-icon-avatar'></span>Agent virtuel</a></li>			
 				{% endif %}
-				{% if config.chat and enterprise.chat and isOperatorAvailable %}
+				{% if config.chat and enterprise.chat and available %}
 				<li><a href="#/chat" data-reverse="true"><span class='lily-icon lily-icon-conversation'></span>Parler à un conseiller</a></li>
 				{% endif %}
 				{% if config.redirectionMail %}
@@ -69,7 +69,7 @@
 	{% block templates %}
 		<!-- L'appel des différents scripts de vue -->
 		<script type="text/template" id="lily-page-avi-template">
-	        {% include 'LilyApiBundle:themes/lily/templates:avi.html.twig' with {'config': config, 'enterprise': enterprise, 'isOperatorAvailable': isOperatorAvailable } %}
+	        {% include 'LilyApiBundle:themes/lily/templates:avi.html.twig' with {'config': config, 'enterprise': enterprise, 'available': available } %}
 	    </script>
 	    <script type="text/template" id="lily-page-chat-template">
 	        {% include 'LilyApiBundle:themes/lily/templates:chat.html.twig' with {'config': config, 'enterprise': enterprise } %}
@@ -117,7 +117,7 @@
 		<script type="text/javascript">
 		    var licence = "{{ key }}";
 		    var root = "{{ path('lily_api_index', { key: key }) }}";
-		    var isOperatorAvailable = "{{ isOperatorAvailable }}";
+		    var available = "{{ available }}";
 		    var config = {{ config|serialize('json') }};
 		</script>
 		{% endautoescape %}
