--- a/src/Lily/ApiBundle/Resources/views/themes/lily/templates/message_chat_operator.html.twig
+++ b/src/Lily/ApiBundle/Resources/views/themes/lily/templates/message_chat_operator.html.twig
@@ -1,2 +1,7 @@
+<div class="lily-msg-chat-operator-info">
+	<img src="<%= operator.avatar %>" class="thumb-sm avatar" width="45" height="45">
+	<% date = new Date(date*1000) %>
+	<p><%= operator.firstname %> à <%= date.getHours() %>h<%= (date.getMinutes()<10?'0':'') + date.getMinutes() %></p>
+</div>
 <p><%= msg %></p>
 <i class="lily-avatar-bubble"></i>
