--- a/web/css/api/lily.css
+++ b/web/css/api/lily.css
@@ -543,14 +543,14 @@ MESSAGES
 #lily-box-messages, #chat-box-messages {
 	position: absolute;
 	top: 0;
-	right: 0;
-	width: 95%;
+	width: 100%;
 	height: 100%;
-	margin-right: 2px;
 	margin-top: 25px;
 	/*	padding-left: 5px;*/
 	padding-top: 80px;
 	padding-bottom: 250px;
+	padding-left: 20px;
+	padding-right: 20px;
 	box-sizing: border-box; 	
 	-moz-box-sizing: border-box; 	
 	-webkit-box-sizing: border-box;
@@ -584,6 +584,28 @@ MESSAGES
 	line-height: 1.7em;
 	position: relative;
 	clear: both;
+}
+
+#chat-box-messages .lily-msg-chat-operator {
+	float: left;
+	margin-left: 70px;
+	margin-top: 15px;
+}
+
+#chat-box-messages .lily-msg-chat-operator-info {
+	position: absolute;
+	left: -70px;
+	top: 0;
+	text-align: center;
+}
+
+#chat-box-messages .lily-msg-chat-operator-info p {
+	width: 60px;
+	font-size: 9px;
+	color: #b8b8b8;
+	text-align:center;
+	line-height: 10px;
+	margin-top: 3px;
 }
 
 #lily-box-messages .lily-msg-redirection {
@@ -658,7 +680,6 @@ MESSAGES
 }
 
 #lily-box-messages .lily-msg-avatar,
-#chat-box-messages .lily-msg-chat-operator,
 #lily-box-messages .lily-msg-redirection {
 	float: left;
 	margin-left: 6px;
@@ -1109,14 +1130,14 @@ MEDIA QUERIES
 *******************/
 
 @media screen and (max-width: 300px){
-	#lily-box-messages, #chat-box-messages {
+	#lily-box-messages {
 		width: 95%;
 	}
 }	
 
 @media screen and (min-width: 480px) {
 
-#lily-box-messages, #chat-box-messages {
+#lily-box-messages {
 	min-width: 320px;
 	width: 95%;
 	font-size: 0.9em;
