--- a/web/css/backoffice/config.css
+++ b/web/css/backoffice/config.css
@@ -70,7 +70,7 @@ h5 {
   font-size: 12px;
 }
 
-.form-control.chatQueueLimit {
+.form-control.chatMax, .form-control.chatMaxQueue {
   width: 50px;
   text-align: center;
 }
