--- a/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
@@ -154,6 +154,7 @@
 'js/backoffice/chat/views/ModalBanView.js' 
 'js/backoffice/chat/views/ParametersView.js' 
 'js/backoffice/chat/views/DashboardView.js'
+'js/backoffice/chat/views/DashboardListConnectedView.js'
 'js/backoffice/chat/views/DashboardConnectedView.js' output='js/compiled/chat.js' %}
 
   <script type="text/javascript" src="{{ asset_url }}"></script>
