--- a/src/Lily/ChatBundle/Resources/views/Operator/templates/dashboard.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/templates/dashboard.html.twig
@@ -29,7 +29,7 @@
       </footer>
     </section>
     
-    <section class="panel portlet-item">
+    <section class="panel portlet-item list-connected">
       <header class="panel-heading">
         Connectés
       </header>
