--- a/src/Lily/ChatBundle/Resources/views/Operator/templates/dashboard_connected.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/templates/dashboard_connected.html.twig
@@ -1,10 +1,10 @@
   <div class="media">
-    <span class="pull-left thumb-sm"><img src="" alt="John said" class="img-circle"></span>
-    <div class="pull-right text-success m-t-sm">
+    <span class="pull-left thumb-sm"><img src="<%= avatar %>" alt="avatar" class="img-circle"></span>
+    <div class="pull-right <% if (available) { %>text-success <% } else { %> text-danger <% } %> m-t-sm">
       <i class="icon-circle"></i>
     </div>
     <div class="media-body">
-      <div><a href="#">Marina Lostan</a></div>
-      <small class="text-muted">Service commercial</small>
+      <div><a href="#"><%= firstname %> <%= lastname %></a></div>
+      <small class="text-muted">Services: <% _.each(services, function(service){ console.log(service)}); %></small>
     </div>
   </div>
