--- a/src/Lily/BackOfficeBundle/Resources/views/Statistics/avi.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Statistics/avi.html.twig
@@ -35,9 +35,10 @@
 
   
   <div class="col-md-6">
-    <!-- Graphique Supports -->
     <section class="panel">
-      <header class="panel-heading font-bold">Taux de satisfaction</header>	
-	  <div id="satisfaction" style="position: relative;"></div>
+      <header class="panel-heading font-bold">Redirections</header>
+      <div class="panel-body">	
+      	<div id="redirections" style="position: relative; height: 316px"></div>                        
+      </div>
     </section>                
   </div>
