--- a/src/Lily/BackOfficeBundle/Resources/views/Statistics/graph-usage.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Statistics/graph-usage.html.twig
@@ -1,8 +1,8 @@
-<header class="panel-heading font-bold">Taux d'utilisation de l'avatar
-<div id="reportrange" class="pull-right">
+<header class="panel-heading font-bold">Taux d'utilisation de l'application
+  <div id="reportrange" class="pull-right">
     <i class="icon-calendar"></i>
     <span></span><b class="caret"></b>
-</div>
+  </div>
 </header>
 <div class="panel-body">
 <!-- loader -->
