--- a/src/Lily/ChatBundle/Resources/views/Operator/templates/record.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/templates/record.html.twig
@@ -1,7 +1,7 @@
 
   <span class="status status-full answered"></span>
   <div class="informations">
-    <p><b>ID </b><%= name %></p>
+    <p><%= name %></p>
     <label>
       <i class="icon-time timer-chat"></i>
       <% if (transfered) { %><i class="icon-share-sign"></i><% } %>
