--- a/src/Lily/ApiBundle/Resources/views/demo/index.html.twig
+++ b/src/Lily/ApiBundle/Resources/views/demo/index.html.twig
@@ -24,7 +24,7 @@
   var licence = '{{ licence }}';
   (function() {
     var lily = document.createElement('script'); lily.type = 'text/javascript'; lily.async = true;
-    lily.src = '{{ app.request.getSchemeAndHttpHost() }}/api/tracking/' + licence;
+    lily.src = '{{ app.request.getBaseURL() }}/api/tracking/' + licence;
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lily, s);
  })();
 </script>
