--- a/web/css/backoffice/chat.css
+++ b/web/css/backoffice/chat.css
@@ -334,16 +334,22 @@ i {
 }
 
 .list-record-item .informations p {
-  margin: 5px 0 0 0;
+  margin: 0;
   color: #787878;
   font-size: 12px;
-  line-height: 8px;
+  overflow: hidden;
+  -o-text-overflow: ellipsis; /* pour Opera 9 */
+  text-overflow: ellipsis;
+  width: 100%;
+  white-space: nowrap;
 }
 
 .list-record-item .informations label {
   color: #787878;
   font-size: 10px;
   margin: 0 0 0 -2px;
+  position: relative;
+  top: -4px;
 }
 
 .list-record-item .informations icon {
@@ -366,6 +372,11 @@ i {
 
 .conversation-header p {
   margin-left: 5px;
+  width: 100%;
+  max-width: -moz-calc(100% - 250px);
+  max-width: -webkit-calc(100% - 250px);
+  max-width: -o-calc(100% - 250px);
+  max-width: calc(100% - 250px);
 }
 
 .conversation-header-control {
@@ -589,4 +600,44 @@ i {
 
 .validate-title {
   line-height: 30px;
+}
+
+@media (max-width: 767px) {
+
+  .aside-chat-left {
+    width: 100%;
+  }
+  
+  .list-record-item .informations {
+  	width: 100%;
+	max-width: -moz-calc(100% - 130px);
+    max-width: -webkit-calc(100% - 130px);
+	max-width: -o-calc(100% - 130px);
+	max-width: calc(100% - 130px);
+  }
+  
+  .modal-close, .modal-ban, .modal-transfer {
+    margin: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0 !important;
+    left: 0 !important;
+  }
+  
+  body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
+    margin-right: 0;
+  }
+
+  .modal-content {
+	height: 100%;
+	border: 0;
+	border-radius: 0;
+  }
+
+  .modal-footer {
+	position: absolute;
+	bottom: 0;
+  }
+
 }
