--- a/web/customer/dev/css/lily-custom.css
+++ b/web/customer/dev/css/lily-custom.css
@@ -140,8 +140,10 @@ input.lily-cst-search-input:ms-input-placeholder {color: #b1b3b4;}
 	border: solid 1px rgba(89,89,89,0.2);
 }
 
-.lily-contact-form a{
+.lily-contact-form button{
 	background-color: #fdb06a;
+	color: white;
+	font-weight: 400;
 }
 
 
