--- a/src/Lily/BackOfficeBundle/Resources/views/Statistics/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Statistics/index.html.twig
@@ -92,11 +92,17 @@
     <script type="text/template" id="user-activity-conversation-app">
 	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Conversations:app.html.twig' %}
     </script>
-    <script type="text/template" id="user-activity-graph">
-	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Graph:graph.html.twig' %}
+    <script type="text/template" id="user-activity-log">
+	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Logs:log.html.twig' %}
     </script>
-    <script type="text/template" id="user-activity-graph-footer">
-	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Graph:graph_footer.html.twig' %}
+    <script type="text/template" id="user-activity-logs-app">
+	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Logs:app.html.twig' %}
+    </script>
+    <script type="text/template" id="user-activity-chat-graph">
+	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Chat:graph.html.twig' %}
+    </script>
+    <script type="text/template" id="user-activity-chat-graph-footer">
+	  {% include 'LilyBackOfficeBundle:Statistics/Users/Activity/Chat:graph_footer.html.twig' %}
     </script>
     {% endblock %}
 
