--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -26,8 +26,8 @@
 
     {% block templates %}
     {% autoescape false %}
-    
-    <!-- include of templates -->    
+
+    <!-- include of templates -->
     <script type="text/template" id="user">
 	  {% include 'LilyUserBundle:Manage:Users/user.html.twig' %}
     </script>
@@ -46,10 +46,10 @@
 
 
 
-  
+
   {% endautoescape %}
   {% endblock %}
-  
+
   {% block bootstrap %}
     {% autoescape false %}
     <script type="text/javascript">
@@ -65,29 +65,34 @@
 
 {% block javascripts %}
 
-{% javascripts 
-'js/vendor/jquery.min.js' 
-'js/vendor/bootstrap.js' 
-'js/vendor/underscore.min.js' 
+{% javascripts
+'js/vendor/jquery.min.js'
+'js/vendor/bootstrap.js'
+'js/vendor/underscore.min.js'
 'js/vendor/backbone.min.js'
 'js/vendor/moment.js'
 
-'js/app.js' 
-'js/app.plugin.js' 
+'js/app.js'
+'js/app.plugin.js'
 
-'js/charts/flot/jquery.flot.min.js' 
-'js/charts/flot/jquery.flot.tooltip.min.js' 
-'js/charts/flot/jquery.flot.resize.js' 
-'js/charts/flot/jquery.flot.orderBars.js' 
-'js/charts/flot/jquery.flot.pie.min.js' 
+'js/charts/flot/jquery.flot.min.js'
+'js/charts/flot/jquery.flot.tooltip.min.js'
+'js/charts/flot/jquery.flot.resize.js'
+'js/charts/flot/jquery.flot.orderBars.js'
+'js/charts/flot/jquery.flot.pie.min.js'
 'js/charts/flot/jquery.flot.time.min.js'
 
 'js/daterangepicker/daterangepicker.js'
- 
-'bundles/fpjsformvalidator/js/fp_js_validator.js'
-'js/backoffice/users.js' 
 
-output='js/compiled/users.js'%}
+'bundles/fpjsformvalidator/js/fp_js_validator.js'
+'js/backoffice/users/router.js'
+'js/backoffice/users/main.js'
+'js/backoffice/users/views/*'
+'js/backoffice/users/models/*'
+'js/backoffice/users/collections/*'
+
+output='js/compiled/users.js'
+%}
 
 <script type="text/javascript" src="{{ asset_url }}"></script>
 
