--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -61,8 +61,7 @@
 
 </section>
 
-<script 
-        src="{{ asset('js/bower_components/requirejs/require.js')}}" 
+<script src="{{ asset('js/bower_components/requirejs/require.js')}}" 
         data-main="{{ asset('js/backoffice/users/main.js')}}">
 </script>
 
