--- a/src/Lily/BackOfficeBundle/Resources/views/Config/global.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/global.html.twig
@@ -39,13 +39,24 @@
     	<!-- show if client.chat is enabled -->
     	{% if app.user.client.config.chat %}
     	<div class="return">
-        	<label class="switch">
-            	<input type="checkbox" name="chat" <% if (chat.active) { %> checked <% } %>>
-            	<span></span>
-            </label>
-            <p>Live chat</p>
-        </div>
-        {% endif %}
+        <label class="switch">
+          <input type="checkbox" name="chat" <% if (chat.active) { %> checked <% } %>>
+          <span></span>
+        </label>
+        <p>Live chat</p>
+      </div>
+      {% endif %}
+        
+    	<!-- show if client.avi is enabled -->
+    	{% if app.user.client.config.avi %}
+    	<div class="return">
+        <label class="switch">
+          <input type="checkbox" name="avi" <% if (avi.active) { %> checked <% } %>>
+          <span></span>
+        </label>
+        <p>Agent virtuel</p>
+      </div>
+      {% endif %}
         
         <!-- show if client.faq is enabled -->
         {% if app.user.client.config.faq %}
@@ -68,20 +79,5 @@
             <p>Top des questions</p>
         </div>
 		{% endif %}
-		
-		<div class="return">
-            <label class="switch">
-            	<input name="redirectionMail" type="checkbox" <% if (redirections.mail) { %> checked <% } %> >
-            	<span></span>
-            </label>
-            <p>Redirection par Mail</p>
-        </div>
-		<div class="return">
-        	<label class="switch">
-            	<input name="redirectionPhone" type="checkbox" <% if (redirections.phone) { %> checked <% } %> >
-            	<span></span>
-            </label>
-            <p>Redirection par Téléphone</p>
-        </div>
 		
     </div>
