users bo & front changes

--- a/src/Lily/UserBundle/Resources/views/Admin/Users/skeleton.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/skeleton.html.twig
@@ -10,7 +10,7 @@
     </ul>
   </div>
   <div class="add-user">
-    <a href="" class="btn btn-sm btn-default new-user">Ajouter un compte</a>
+    <button class="btn btn-sm btn-default new-user">Ajouter un compte</button>
   </div>
   <ul class="breadcrumb m-n">
   </ul>
