--- a/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
@@ -3,15 +3,17 @@
 			<div class="clearfix m-b-xlg">
 				<div class="clear">
 					<div class="h5 m-t-xs m-b-xs">
-						<% if(typeof(username) == undefined) { %>
-							Ajouter un utilisateur
-						<% } else { %>
+						<% if(username) { %>
 							Modifier un utilisateur
+						<% } else { %>
+							Ajouter un utilisateur
 						<% } %>
 					</div> 
 					<form class="user-editor m-t">
   					
-  				  <div id="avatar-widget" class="col-xs-4 dropzone no-padder-l">
+  				  <div class="col-xs-4 no-padder-l avatar-wrapper">
+    				  <input type="file" name="avatarFile" accept="image/*">
+    				  <img src="<%= converted.avatar %>" class="avatar">
     				  <button class="btn btn-sm btn-white uploader">Modifier</button>
   				  </div>
   				  
@@ -19,16 +21,19 @@
               <div class="form-group">
                 <label>Prénom</label>
                 <input type="text" name="firstname" class="form-control input-sm" value="<%= firstname %>">
+                <p class="help-block hidden"></p>
               </div>
               <div class="form-group">
                 <label>Nom</label>
                 <input type="text" name="lastname" class="form-control input-sm" value="<%= lastname %>">
+                <p class="help-block hidden"></p>
   					  </div>
             </div>
             
             <div class="form-group">
               <label>Poste</label>
               <input type="text" name="post" class="form-control input-sm" value="<%= post %>">
+              <p class="help-block hidden"></p>
   					</div>
   					
   					<div class="form-group">
@@ -48,31 +53,37 @@
             <div class="form-group">
               <label>Pays</label>
               <input type="text" name="country" class="form-control input-sm" value="<%= country %>">
+              <p class="help-block hidden"></p>
   					</div>
   					
             <div class="form-group">
               <label>Téléphone</label>
-              <input type="phone" name="lastname" class="form-control input-sm" value="<%= phone %>">
+              <input type="phone" name="phone" class="form-control input-sm" value="<%= phone %>">
+              <p class="help-block hidden"></p>
   					</div>
   					
             <div class="form-group">
               <label>Email</label>
               <input type="email" name="email" class="form-control input-sm" value="<%= email %>">
+              <p class="help-block hidden"></p>
   					</div>
   					
             <div class="form-group">
               <label>Login</label>
               <input type="text" name="username" class="form-control input-sm" value="<%= username %>">
+              <p class="help-block hidden"></p>
   					</div>
   					
             <div class="form-group col-xs-6 no-padder-l">
               <label>Mot de passe</label>
-              <input type="password" name="first" class="form-control input-sm" value="">
+              <input type="password" name="plainPassword" class="form-control input-sm" value="">
+              <p class="help-block hidden"></p>
   					</div>
   					
             <div class="form-group col-xs-6 no-padder-r">
               <label>Confirmation</label>
-              <input type="password" name="second" class="form-control input-sm" value="">
+              <input type="password" name="plainPasswordRepeat" class="form-control input-sm" value="">
+              <p class="help-block hidden"></p>
   					</div>
   					
           </form>
